Release Notes

* 1/19/2016
  * changed addMetaData to limit the size of json for failed jobs

* 1/18/2016
  * changed to update status of ES jobs when ES-merge is done
  * enabled a protection for transferring->holding and holding->holding with final heartbeats

* 1/12/2016
  * changed AdderAtlas for alternative stage-out
  * added objstoreID to updateEventRange
  * changed eventLookupClientEI to use new EI client

* 1/11/2016
  * changed killJob so that 51 goes forward even if commandToPilot was already set

* 1/5/2016
  * using DISK for prestaging

* 12/28/2015
  * fixed updateUnmerged so that merging jobs fail only when max attempt is reached

* 12/15/2015
  * removed redundant log sending
  * added days to getScriptOfflineRunning
  * fixed dispatcher to release lock in finally

* 12/12/2015
  * killing pending jobs in small chunks to avoid timeout
  * added protection in panda.py for cgi exception

* 12/9/2015
  * changed AtlasAdder so that jobs don't go to transferring if only log
  * removed panda_ddm_relation

* 12/8/2015
  * fixed input duplication check for multiple consumers
  * using DISK for tape prestaging for analysis

* 12/7/2015
  * inroduced jobStatus=closed
  * changed Adder to send notification when --destSE doesn't work


* 12/2/2015
  * added a protection in insertNewJob to avoid duplicated input usage

* 11/30/2015
  * added a protection for late insert of metadata

* 11/26/2015
  * added jobStatus=closed
  * changed Nucleus to remove ATLAS when getting endpoint with spacetoken

* 11/23/2015
  * fixed pseudo files in propagateResult

* current
  * added max/minrss
  * using std by default for jobSeed
  * changed not to reset nooutput when pmerge is done
  * fixed getSiteSpecs not to propagate ddm endpoints to clients
  * added nucleus stuff
  * improved error message when pilot produced a wrong file
  * added changeTaskCputime
  * using Express for urgent or high prio input
  * checking metadata before closing sub datasets to avoid a rucio bug