@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/25/2016
+  * sending objStoreIDs for ES merge
+
 * 1/19/2016
   * changed addMetaData to limit the size of json for failed jobs
 
